package NDnnProto;


message TSimConfiguration {
    optional uint32 Jobs = 1;
    optional double Duration = 2;
    optional double Dt = 3;
    optional int32 Seed = 4;
    optional int32 ConnectionSeed = 5;
    optional double PastTime = 6;
}

